[package]
name = "zewif-zcashd"
version = "0.1.0"
edition = "2024"

[dependencies]
zewif = "0.1.0"
anyhow = "1.0.95"
chrono = "0.4.39"
hex = "0.4.3"
sha2 = "^0.10.6"
# bc-components = "^0.18.0"
# bc-envelope = "^0.25.0"
zcash_protocol = "0.5"
zcash_address = "0.7"
ripemd = "0.1.3"
byteorder = "1.5.0"

[features]
default = []
with-context = []

[patch.crates-io]
zewif = { git = "https://github.com/BlockchainCommons/zewif.git", rev = "a520346763191b41d66088a7d64a0e27574364fb" }
